# rscc

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md  build.rs  rsc.c  test.rsc
.github/workflows/: release.yml  test.yml
script/: build-darwin-aarch64.sh  build-darwin-image-aarch64.sh  build-darwin-image-x86_64.sh  build-darwin-x86_64.sh  build-linux-aarch64.sh  build-linux-x86_64.sh  build-windows-image.sh  build-windows.sh
src/: compiler.rs  emitter.rs  lib.rs  parser.rs
windows/: Dockerfile  rscc.iss
windows/mingw64_rsc/lib/gcc/x86_64-w64-mingw32/14.2.0/plugin/: gtype.state
windows/mingw64_rsc/lib/gcc/x86_64-w64-mingw32/14.2.0/plugin/include/: auto-host.h  configargs.h  insn-codes.h  insn-flags.h  options.h  tm-preds.h  version.h
